--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,20 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
+
+# Mac OS
+.DS_Store
+
+# Ignore all .wav, .mp3, and .txt files in the userdata folder
+webserver/userdata/**/*.wav
+webserver/userdata/**/*.mp3
+webserver/userdata/**/*.txt
+
+# Except for those starting with "example-"
+!webserver/userdata/**/example-*.wav
+!webserver/userdata/**/example-*.mp3
+!webserver/userdata/**/example-*.txt
+
+# Ignore the database
+*.db
+.vscode/settings.json
