--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 multidict==6.0.4
+PyAudio==0.2.13
 requests==2.31.0
 SQLAlchemy==2.0.22
 typing_extensions==4.8.0
